--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div>
+    <h1>Ceci est un titre</h1>
+    <img src="img/Capture2.PNG" alt="Une image">
+    </div>
+    <p>Jacob</p>
 </body>
 </html>
